# assessment_test_cied

./: README.md  pyproject.toml  requirements.txt
cied_project/: Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  requirements.txt
cied_project/apps/authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
cied_project/apps/authentication/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
cied_project/apps/billing/: models.py  serializers.py  urls.py  views.py
cied_project/apps/billing/migrations/: 0001_initial.py  0002_billitem_subtotal.py
cied_project/apps/dashboard/: serializers.py  urls.py  views.py
cied_project/apps/medicines/: models.py  serializers.py  urls.py  views.py
cied_project/apps/medicines/migrations/: 0001_initial.py
cied_project/apps/users/: serializers.py  urls.py  views.py
cied_project/cied_project/: asgi.py  settings.py  urls.py  wsgi.py
